<resources>
    <string name="app_name">Asteroid Radar</string>
    <string name="main_title">Asteroids</string>
    <string name="detail_title">Asteroid Detail</string>
    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format" translatable="false">%f au</string>
    <string name="km_unit_format" translatable="false">%f km</string>
    <string name="km_s_unit_format" translatable="false">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="content_description_image_of_the_day">The image of the day is: %s</string>
    <string name="content_description_absolute_magnitude">Absolute magnitude: click to find out what this is</string>
    <string name="content_description_image_hazardous">Image of hazardous asteroid</string>
    <string name="content_description_image_non_hazardous">Image of a non hazardous asteroid</string>
</resources>
